--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@ function onInstallClick(e) {
 			<div class="container">
 				<div class="row">
 					<div class="col-md-10 col-sm-12">
-						<p>Chrome Proxy is a mitmproxy based devtools extension that lets you edit remote files locally and serve them to Chrome before its requet reaches the web.</p>
+						<p>Chrome Proxy is a mitmproxy based devtools extension that lets you edit remote files locally and serve them directly to Chrome.</p>
 						<h3>Wait, what's a proxy server?</h3>
 						<a href="http://en.wikipedia.org/wiki/Proxy_server"><p class="qoute">&ldquo;In computer networks, a <strong>proxy server</strong> is a server (a computer system or an application) that acts as an intermediary for requests from clients seeking resources from other servers.&rdquo;</p></a>
 						<p>Chrome Proxy basically seats between Chrome and the web. Whenever Chrome makes a request, Chrome Proxy is notified about it and can do one of two things, it can either let the request "roll", allowing Chrome to load that file from the web, or it can serve Chrome a local file, "fooling" it into thinking it came from the web.</p>
 						<h3>How do I use Chrome Proxy?</h3>
-						<p>Once installed, Chrome Proxy will add a new panel to your devtools, the "Proxy" panel. Similar to the Network panel, the Proxy panel shows you a list of all request made by this tab. Click on one of these network requets and the response Chrome got will open in your default editor. Make the changes you need and save the file. Once you hit refresh, Chrome Proxy will serve Chrome the file you just edited.</p>
+						<p>Once installed, Chrome Proxy will add a new panel to your devtools, the "Proxy" panel. Similar to the Network panel, the Proxy panel shows you a list of all request made by this tab. Click on one of these network requests and the response Chrome got will open in your default editor. Make the changes you need and save the file. Once you hit refresh, Chrome Proxy will serve Chrome the file you just saved.</p>
 						<h3>Installing</h3>
-						<p>Chrome Proxy is based on the awesome mitmproxy (man-in-the-middle proxy), or more precisely, libmproxy, its companion library that allows implementing powerful interception proxies. Mitmproxy's latest release is 0.10, but some of the features Chrome Proxy uses will only be released in 0.11 (which should be released in the coming days). Due to this, Chrome Proxy's installation might be a bit complex.</p>
+						<p>Chrome Proxy is based on the awesome <a href="http://mitmproxy.org/">mitmproxy</a> (man-in-the-middle proxy), or more precisely, libmproxy, its companion library that allows implementing powerful interception proxies. Mitmproxy's latest release is 0.10, but some of the features Chrome Proxy uses will only be released in 0.11 (which should be released in the coming days). Due to this, Chrome Proxy's installation might be a bit complex.</p>
 						<p>1. Install mitmproxy-0.11-latest from the master</p>
 						<pre><span class="prompt"></span>git clone https://github.com/mitmproxy/mitmproxy.git<br/><span class="prompt"></span>cd mitmproxy<br/><span class="prompt"></span>pip install --src . -r requirements.txt</pre>
 						<p>2. Install Chrome Proxy's proxy</p>
 						<pre><span class="prompt"></span>pip install chrome-proxy</pre>
-						<p>3. Install Chrome Proxy's devtools extension by going here and clicking install</p>
+						<p>3. Install <a href="https://chrome.google.com/webstore/detail/chrome-proxy/bkblajiolelpgnnnclnjkcpmlbnanpkf" target="_blank">Chrome Proxy's devtools extension</a></p>
 					</div>
 				</div>
 			</div>
