Changed a few words

--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@ function onInstallClick(e) {
 						<h3>How do I use Chrome Proxy?</h3>
 						<p>Once installed, Chrome Proxy will add a new panel to your devtools, the "Proxy" panel. Similar to the Network panel, the Proxy panel shows you a list of all request made by this tab. Click on one of these network requests and the response Chrome got will open in your default editor. Make the changes you need and save the file. Once you hit refresh, Chrome Proxy will serve Chrome the file you just saved.</p>
 						<h3>Installing</h3>
-						<p>Chrome Proxy is based on the awesome <a href="http://mitmproxy.org/">mitmproxy</a> (man-in-the-middle proxy), or more precisely, libmproxy, its companion library that allows implementing powerful interception proxies. Mitmproxy's latest release is 0.10, but some of the features Chrome Proxy uses will only be released in 0.11 (which should be released in the coming days). Due to this, Chrome Proxy's installation might be a bit complex.</p>
+						<p>Chrome Proxy is based on the awesome <a href="http://mitmproxy.org/">mitmproxy</a> (man-in-the-middle proxy), or more precisely, libmproxy, its companion library that allows implementing powerful interception proxies. The latest release of Mitmproxy is 0.10, but some of the features Chrome Proxy uses will only be released in 0.11 (which should be released in the coming days). Due to this, installing Chrome Proxy might be a bit complex.</p>
 						<p>1. Install mitmproxy-0.11-latest from the master</p>
 						<pre><span class="prompt"></span>git clone https://github.com/mitmproxy/mitmproxy.git<br/><span class="prompt"></span>cd mitmproxy<br/><span class="prompt"></span>pip install --src . -r requirements.txt</pre>
-						<p>2. Install Chrome Proxy's proxy</p>
+						<p>2. Install Chrome Proxy python script</p>
 						<pre><span class="prompt"></span>pip install chrome-proxy</pre>
-						<p>3. Install <a href="https://chrome.google.com/webstore/detail/chrome-proxy/bkblajiolelpgnnnclnjkcpmlbnanpkf" target="_blank">Chrome Proxy's devtools extension</a></p>
+						<p>3. Install <a href="https://chrome.google.com/webstore/detail/chrome-proxy/bkblajiolelpgnnnclnjkcpmlbnanpkf" target="_blank">Chrome Proxy devtools extension</a></p>
 					</div>
 				</div>
 			</div>
