Redesigned communication with proxy
Added bi-directional messaging

--- a/chrome-extension/app/devtools.html
+++ b/chrome-extension/app/devtools.html
@@ -12,6 +12,7 @@
     <body>
         <!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
+        <script src="bower_components/q/q.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
