--- a/chrome-extension/app/panel.html
+++ b/chrome-extension/app/panel.html
@@ -82,6 +82,7 @@
 
 		<!-- build:js scripts/vendor.js -->
 		<!-- bower:js -->
+		<script src="bower_components/q/q.js"></script>
 		<!-- endbower -->
 		<!-- endbuild -->
 
