Added port selection, proxy state, restart proxy

--- a/chrome-extension/app/panel.html
+++ b/chrome-extension/app/panel.html
@@ -32,6 +32,17 @@
 					<div class="value"><textarea id="txtPACFile"></textarea></div>
 					<div class="clearfix"></div>
 				</div>
+				<div class="property property-inline">
+					<div class="label">
+						<div class="label-text">Proxy Port Number</div>
+					</div>
+					<div class="value">
+						<input id="txtProxyPort" type="text">
+						<a id="btnRestartProxy" class="button" href="#">Restart Proxy</a>
+						<span class="proxy-restarted-notification">&#10003; Proxy Restarted</span>
+					</div>
+					<div class="clearfix"></div>
+				</div>
 				<a id="btnRestoreDefaults" class="button" href="#">Restore Defaults</a>
 			</div>
 		</div>
