Fixed: restore default wouldn't save settings

--- a/chrome-extension/app/panel.html
+++ b/chrome-extension/app/panel.html
@@ -34,7 +34,7 @@
 				</div>
 				<div class="property property-inline">
 					<div class="label">
-						<div class="label-text">Proxy Port Number</div>
+						<div class="label-text">Proxy Port</div>
 					</div>
 					<div class="value">
 						<input id="txtProxyPort" type="text">
