Better proxy error message

--- a/chrome-extension/app/panel.html
+++ b/chrome-extension/app/panel.html
@@ -41,6 +41,7 @@
 						<a id="btnRestartProxy" class="button" href="#">Restart Proxy</a>
 						<span class="proxy-restarted-notification">&#10003; Proxy Restarted</span>
 					</div>
+					<div class="proxy-port-error-message">Proxy server could not start because the port is alreday taken by another service. Choose a different port and restart the server to fix this.</div>
 					<div class="clearfix"></div>
 				</div>
 				<a id="btnRestoreDefaults" class="button" href="#">Restore Defaults</a>
