Changed toolbar layout model to flex

--- a/chrome-extension/app/panel.html
+++ b/chrome-extension/app/panel.html
@@ -67,6 +67,7 @@
 				<div class="toolbar">
 					<span class="label">Filter:</span>
 					<input id="txtFilter" type="text"/>
+					<span class="spacer"></span>
 					<span class="toggle-proxy"><span class="dot">&#8226;</span></span>
 				</div>
 				<div id="requestsContainer" class="vbox"></div>
