--- a/chrome-extension/app/panel.html
+++ b/chrome-extension/app/panel.html
@@ -88,8 +88,12 @@
 				<div class="sidebar-list-item-checkbox">
 					<input type="checkbox">
 				</div>
-				<div class="sidebar-list-item-title"></div>
-				<div class="sidebar-list-item-subtitle"></div>
+				<div class="sidebar-list-item-data">
+					<div class="sidebar-list-item-title"></div>
+					<div class="sidebar-list-item-subtitle"></div>
+				</div>
+				<div class="spacer"></div>
+				<div class="sidebar-list-item-delete"></div>
 			</div>
 		</div>
 
@@ -100,6 +104,7 @@
 		<!-- endbuild -->
 
 		<!-- build:js scripts/panel.js -->
+		<script src="scripts/mimetypes.js"></script>
 		<script src="scripts/panel.js"></script>
 		<!-- endbuild -->
 	</body>
