--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ function onInstallClick(e) {
 		<div class="hero-container">
 			<div class="container">
 				<div class="row">
-					<div class="col-sm-4">
+					<div class="col-lg-4 col-md-5 col-sm-12 logo-container">
 						<div class="logo">
 							<img src="images/logo.png" srcset="images/logo.png 1x, images/logo@2x.png 2x">
 						</div>
@@ -44,7 +44,7 @@ function onInstallClick(e) {
 						</div>
 						<div class="install-btn" onclick="onInstallClick()">Install</div>
 					</div>
-					<div class="col-sm-8">
+					<div class="col-lg-8 col-md-7 col-sm-12">
 						<img class="hero" src="images/screenshot.png" srcset="images/screenshot.png 1x, images/screenshot@2x.png 2x">
 					</div>
 				</div>
