Rebranded as "Tamper"

--- a/chrome-extension/app/panel.html
+++ b/chrome-extension/app/panel.html
@@ -14,7 +14,7 @@
 		<!-- Settings -->
 		<div id="settings">
 			<div class="close-button"></div>
-			<div class="header">Chrome Proxy Settings</div>
+			<div class="header">Tamper Settings</div>
 			<div class="properties">
 				<div class="property property-inline">
 					<div class="label">
