--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="shortcut icon" href="images/favicon.png" sizes="16x16"/>
 		<link rel="shortcut icon" href="images/favicon@2x.png" sizes="32x32"/>
 
-		<title>Chrome Proxy</title>
+		<title>Tamper</title>
 
 		<script>
 var heroContainer;
@@ -61,7 +61,7 @@ function onPlayVideoClick(e) {
 							<img src="images/logo.png" srcset="images/logo.png 1x, images/logo@2x.png 2x">
 						</div>
 <!-- 							<div class="logo-small"></div>
-							<div class="name">Chrome Proxy</div>
+							<div class="name">Tamper</div>
 							<div class="slogan">mitmproxy based devtools extension</div>
 							<div class="alpha">alpha</div> -->
 						<div class="description">
@@ -90,19 +90,19 @@ function onPlayVideoClick(e) {
 			<div class="container">
 				<div class="row">
 					<div class="col-md-10 col-sm-12">
-						<p>Chrome Proxy is a mitmproxy based devtools extension that lets you edit remote files locally and serve them directly to Chrome.</p>
+						<p>Tamper is a mitmproxy based devtools extension that lets you edit remote files locally and serve them directly to Chrome.</p>
 						<h3>Wait, what's a proxy server?</h3>
 						<a class="wiki-link" href="http://en.wikipedia.org/wiki/Proxy_server"><p class="qoute">&ldquo;In computer networks, a <strong>proxy server</strong> is a server (a computer system or an application) that acts as an intermediary for requests from clients seeking resources from other servers.&rdquo;</p></a>
-						<p>Chrome Proxy basically seats between Chrome and the web. Whenever Chrome makes a request, Chrome Proxy is notified about it and can do one of two things, it can either let the request "roll", allowing Chrome to load that file from the web, or it can serve Chrome a local file, "fooling" it into thinking it came from the web.</p>
-						<h3>How do I use Chrome Proxy?</h3>
-						<p>Once installed, Chrome Proxy will add a new panel to your devtools, the "Proxy" panel. Similar to the Network panel, the Proxy panel shows you a list of all request made by this tab. Click on one of these network requests and the response Chrome got will open in your default editor. Make the changes you need and save the file. Once you hit refresh, Chrome Proxy will serve Chrome the file you just saved.</p>
+						<p>Tamper basically seats between Chrome and the web. Whenever Chrome makes a request, Tamper is notified about it and can do one of two things, it can either let the request "roll", allowing Chrome to load that file from the web, or it can serve Chrome a local file, "fooling" it into thinking it came from the web.</p>
+						<h3>How do I use Tamper?</h3>
+						<p>Once installed, Tamper will add a new panel to your devtools, the "Tamper" panel. Similar to the Network panel, the Tamper panel shows you a list of all requests made by this tab. Click on one of these network requests and the response Chrome got will open in your default editor. Make the changes you need and save the file. Once you hit refresh, Tamper will serve Chrome the file you just saved.</p>
 						<h3>Installing</h3>
-						<p>Chrome Proxy is based on the awesome <a href="http://mitmproxy.org/">mitmproxy</a> (man-in-the-middle proxy), or more precisely, libmproxy, its companion library that allows implementing powerful interception proxies. The latest release of Mitmproxy is 0.10, but some of the features Chrome Proxy uses will only be released in 0.11 (which should be released in the coming days). Due to this, installing Chrome Proxy might be a bit complex.</p>
+						<p>Tamper is based on the awesome <a href="http://mitmproxy.org/">mitmproxy</a> (man-in-the-middle proxy), or more precisely, libmproxy, its companion library that allows implementing powerful interception proxies. The latest release of Mitmproxy is 0.10, but some of the features Tamper uses will only be released in 0.11 (which should be released in the coming days). Due to this, installing Tamper might be a bit complex.</p>
 						<p>1. Install mitmproxy-0.11-latest from the master</p>
 						<pre><span class="prompt"></span>git clone https://github.com/mitmproxy/mitmproxy.git<br/><span class="prompt"></span>cd mitmproxy<br/><span class="prompt"></span>pip install --src . -r requirements.txt</pre>
-						<p>2. Install Chrome Proxy python script</p>
+						<p>2. Install Tamper python script</p>
 						<pre><span class="prompt"></span>pip install chrome-proxy</pre>
-						<p>3. Install <a href="https://chrome.google.com/webstore/detail/chrome-proxy/bkblajiolelpgnnnclnjkcpmlbnanpkf" target="_blank">Chrome Proxy devtools extension</a></p>
+						<p>3. Install <a href="https://chrome.google.com/webstore/detail/chrome-proxy/bkblajiolelpgnnnclnjkcpmlbnanpkf" target="_blank">Tamper devtools extension</a></p>
 					</div>
 				</div>
 			</div>
