Rebranded as "Tamper"

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ function onPlayVideoClick(e) {
 						<p>1. Install mitmproxy-0.11-latest from the master</p>
 						<pre><span class="prompt"></span>git clone https://github.com/mitmproxy/mitmproxy.git<br/><span class="prompt"></span>cd mitmproxy<br/><span class="prompt"></span>pip install --src . -r requirements.txt</pre>
 						<p>2. Install Tamper python script</p>
-						<pre><span class="prompt"></span>pip install chrome-proxy</pre>
+						<pre><span class="prompt"></span>pip install tamper</pre>
 						<p>3. Install <a href="https://chrome.google.com/webstore/detail/chrome-proxy/bkblajiolelpgnnnclnjkcpmlbnanpkf" target="_blank">Tamper devtools extension</a></p>
 					</div>
 				</div>
