Renamed to "Tamper"

--- a/chrome-extension/app/panel.html
+++ b/chrome-extension/app/panel.html
@@ -63,7 +63,7 @@
 
 			<!-- Network -->
 			<div class="right-pane vbox">
-				<div class="error-message">Could not connect to proxy (<a target="_blank" href="http://dutzi.github.com/chrome-proxy/#proxy-connection-error">help</a>)</div>
+				<div class="error-message">Could not connect to proxy (<a target="_blank" href="http://dutzi.github.io/tamper/#proxy-connection-error">help</a>)</div>
 				<div class="toolbar">
 					<span class="label">Filter:</span>
 					<input id="txtFilter" type="text"/>
