--- a/chrome-extension/app/firstRun.html
+++ b/chrome-extension/app/firstRun.html
@@ -6,10 +6,11 @@
 		<!-- endbower -->
 		<!-- endbuild -->
 		<!-- build:css styles/main.css -->
+		<!-- endbuild -->
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,600italic,300,600' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="styles/firstRun.css">
-		<!-- endbuild -->
+		<title>Tamper</title>
 	</head>
 	<body>
 		<div class="container">
