--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ function onPlayVideoClick(e) {
 						<pre><span class="prompt"></span>git clone https://github.com/mitmproxy/mitmproxy.git<br/><span class="prompt"></span>cd mitmproxy<br/><span class="prompt"></span>pip install --src . -r requirements.txt</pre>
 						<p>2. Install Tamper python script</p>
 						<pre><span class="prompt"></span>pip install tamper</pre>
-						<p>3. Install <a href="https://chrome.google.com/webstore/detail/tamper/mabhojhgigkmnkppkncbkblecnnanfmd" target="_blank">Tamper devtools extension</a></p>
+						<p>3. Install <a href="https://chrome.google.com/webstore/detail/tamper/mabhojhgigkmnkppkncbkblecnnanfmd" target="_blank">Tamper's devtools extension</a></p>
 					</div>
 				</div>
 			</div>
