Added bootstrap for first-run page

--- a/chrome-extension/app/firstRun.html
+++ b/chrome-extension/app/firstRun.html
@@ -3,12 +3,12 @@
 	<head>
 		<!-- build:css styles/vendor.css -->
 		<!-- bower:css -->
+		<link rel="stylesheet" href="bower_components/bootstrap-css-only/css/bootstrap.css" />
 		<!-- endbower -->
 		<!-- endbuild -->
 		<!-- build:css styles/main.css -->
 		<!-- endbuild -->
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,600italic,300,600' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="styles/firstRun.css">
 		<title>Tamper</title>
 	</head>
@@ -20,7 +20,7 @@
 			<p>To complete the installation please follow these steps:</p>
 			<ol>
 				<li>
-					<p>If you haven't already, install Tamper's mitmproxy extension</p>
+					<p>If you haven't already, <strong>install Tamper's mitmproxy extension</strong></p>
 					<ol>
 						<li>
 							<p>Install mitmproxy-0.11-latest from the master</p>
@@ -33,7 +33,7 @@
 					</ol>
 				</li>
 				<li>
-					<p>Install mitmproxy's certificate. For mitmproxy to inspect and modify packets served behind SSL you will need to install its certificate. Follow the instruction <a href="http://mitmproxy.org/doc/certinstall/webapp.html">here</a> to complete this step. Make sure Tamper is enabled before visiting <a href="http://mitm.it">mitm.it</a>.</p>
+					<p><strong>Install mitmproxy's certificate.</strong> For mitmproxy to inspect and modify packets served behind SSL you will need to install its certificate. Follow the instruction <a href="http://mitmproxy.org/doc/certinstall/webapp.html">here</a> to complete this step. Make sure Tamper is enabled before visiting <a href="http://mitm.it">mitm.it</a>.</p>
 				</li>
 			</ol>
 		</div>
