--- a/chrome-extension/app/devtools.html
+++ b/chrome-extension/app/devtools.html
@@ -3,6 +3,7 @@
     <head>
         <!-- build:css styles/vendor.css -->
         <!-- bower:css -->
+        <link rel="stylesheet" href="bower_components/bootstrap-css-only/css/bootstrap.css" />
         <!-- endbower -->
         <!-- endbuild -->
         <!-- build:css styles/main.css -->
