Cache-busted mitm.it link

--- a/chrome-extension/app/first-run.html
+++ b/chrome-extension/app/first-run.html
@@ -33,7 +33,7 @@
 					</ol>
 				</li>
 				<li>
-					<p><strong>Install mitmproxy's certificate.</strong> For mitmproxy to inspect and modify packets served behind SSL you will need to install its certificate. Follow the instruction <a href="http://mitmproxy.org/doc/certinstall/webapp.html">here</a> to complete this step. Make sure Tamper is enabled before visiting <a href="http://mitm.it">mitm.it</a>.</p>
+					<p><strong>Install mitmproxy's certificate.</strong> For mitmproxy to inspect and modify packets served behind SSL you will need to install its certificate. Follow the instruction <a href="http://mitmproxy.org/doc/certinstall/webapp.html">here</a> to complete this step. Make sure Tamper is enabled before visiting <a id="mitmLink" href="http://mitm.it/">mitm.it</a>.</p>
 				</li>
 			</ol>
 		</div>
@@ -43,7 +43,8 @@
 		<!-- endbower -->
 		<!-- endbuild -->
 
-		<!-- build:js scripts/panel.js -->
+		<!-- build:js scripts/firstRun.js -->
+		<script src="scripts/firstRun.js"></script>
 		<!-- endbuild -->
 	</body>
 </html>
