--- a/chrome-extension/app/first-run.html
+++ b/chrome-extension/app/first-run.html
@@ -35,6 +35,10 @@
 				<li>
 					<p><strong>Install mitmproxy's certificate.</strong> For mitmproxy to inspect and modify packets served behind SSL you will need to install its certificate. Follow the instruction <a href="http://mitmproxy.org/doc/certinstall/webapp.html">here</a> to complete this step. Make sure Tamper is enabled before visiting <a id="mitmLink" href="http://mitm.it/">mitm.it</a>.</p>
 				</li>
+				<li>
+					<p><strong>Choose a default editor.</strong> When you click on one of the network requests in Tamper's devtools panel, Tamper will try to open that file with the default application for that file type. If your HTML files are opened in Chrome, for example, that file will open in Chrome. You will probably want to change that to some text editor instead. To do that, open the devtools, go to the Tamper panel, click on the cog icon and set the Editor Command Line.</p>
+					<img class="screenshot" src="images/editor-command-line-screenshot.png" srcset="images/editor-command-line-screenshot.png 1x, images/editor-command-line-screenshot@2x.png 2x">
+				</li>
 			</ol>
 		</div>
 		<!-- build:js scripts/vendor.js -->
