Added editor path example for windows

--- a/chrome-extension/app/panel.html
+++ b/chrome-extension/app/panel.html
@@ -19,7 +19,7 @@
 				<div class="property property-inline">
 					<div class="label">
 						<div class="label-text">Editor Command Line</div>
-						<div class="tooltip">The command line used to open the editor, $1 will be replaced with the file's name (for example `subl -n $1`)</div>
+						<div class="tooltip">The command line used to open the editor, $1 will be replaced with the file's name (for example <span class="show-os-osx">`subl -n $1`</span><span class="show-os-windows">`C:\Program Files (x86)\Notepad++\notepad++.exe $1`</span>)</div>
 					</div>
 					<div class="value"><input id="txtEditorCommand" type="text"></div>
 					<div class="clearfix"></div>
