Added checking for updates

--- a/chrome-extension/app/panel.html
+++ b/chrome-extension/app/panel.html
@@ -69,6 +69,7 @@
 					<input id="txtFilter" type="text"/>
 					<span class="spacer"></span>
 					<span class="toggle-proxy"><span class="dot">&#8226;</span></span>
+					<div class="update-button">Update Available</div>
 				</div>
 				<div id="requestsContainer" class="vbox"></div>
 			</div>
@@ -76,11 +77,11 @@
 			<!-- templates -->
 			<div id="requestItem" class="request-item">
 				<span class="request-item-modified-badge">Modified</span>
-				<a href="#"></a>
+				<a class="request-item-link" href="#"></a>
 				<span class="request-item-url"></span>
 				<span class="request-item-actions">
 					<span class="request-item-action-button request-item-loading-spinner">Loading...</span>
-					<span class="request-item-action-button request-item-discard-changes">Delete</span>
+					<a href="#" class="request-item-action-button request-item-discard-changes">Delete</a>
 				</span>
 			</div>
 			
