--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@ function onPlayVideoClick(e) {
 					</div>
 				</div>
 			</div>
+			<div class="container footer">
+				<a href="//github.com/dutzi/tamper">Github Page</a>
+			</div>
 		</div>
 	</body>
 
