--- a/chrome-extension/app/devtools.html
+++ b/chrome-extension/app/devtools.html
@@ -3,7 +3,6 @@
     <head>
         <!-- build:css styles/vendor.css -->
         <!-- bower:css -->
-        <link rel="stylesheet" href="bower_components/bootstrap-css-only/css/bootstrap.css" />
         <!-- endbower -->
         <!-- endbuild -->
         <!-- build:css styles/main.css -->
@@ -14,6 +13,7 @@
         <!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
         <script src="bower_components/q/q.js"></script>
+        <script src="bower_components/angular/angular.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
