--- a/chrome-extension/app/first-run.html
+++ b/chrome-extension/app/first-run.html
@@ -43,6 +43,7 @@
 		<!-- build:js scripts/vendor.js -->
 		<!-- bower:js -->
 		<script src="bower_components/q/q.js"></script>
+		<script src="bower_components/angular/angular.js"></script>
 		<!-- endbower -->
 		<!-- endbuild -->
 
